Добавлены картинки как с этим работать

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,6 +5,7 @@
 
   <h3><%= t('static_pages.about.developer')%></h3>
   <h3><%= t('static_pages.about.de_translate')%></h3>
+  <h3><%= t('static_pages.about.logo_designed_by')%></h3>
   <br>
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
