--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -15,20 +15,20 @@
 .container.top-buffer
   .row
     .col-sm-12
-      %h2= 'It is pretty simple:'
+      %h2= t('static_pages.index.how_it_works')
   .row.how-it-works
     .col-lg-4.col-md-4.col-sm-4
       #first-step-hiw
       .step-number-hiw= '1'
-      %p= 'Upload a file'
+      %p= t('static_pages.index.upload_a_file')
     .col-lg-4.col-md-4.col-sm-4
       #second-step-hiw
       .step-number-hiw= '2'
-      %p= 'Select free fall range'
+      %p= t('static_pages.index.select_free_fall_range')
     .col-lg-4.col-md-4.col-sm-4
       #third-step-hiw
       .step-number-hiw= '3'
-      %p= 'Analyze'
+      %p= t('static_pages.index.analyze')
 
 %hr
 
