--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -27,6 +27,28 @@
 
     $(document).ready(function() {
 
+      $("#range-selector").ionRangeSlider({
+        min: max_height,
+        max: min_height,
+        type: 'double',
+        step: 50,
+        prettify: false,
+        hasGrid: true,
+        from: max_height,
+        to: min_height,
+        onFinish: function (obj) {      // callback is called on slider action is finished
+          if (in_imperial) {
+            range_from = obj.fromNumber / mft_k;
+            range_to = obj.toNumber / mft_k;
+          } else {
+            range_from = obj.fromNumber;
+            range_to = obj.toNumber;
+          }
+          window.history.replaceState({}, document.title, "?f=" + range_from + "&t=" + range_to);
+          set_chart_data();
+        }
+      });
+
       $('#elevation_distance_chart').highcharts({
           chart: {
             type: 'spline',
@@ -302,6 +324,95 @@
     });
 
   });
+
+  function updateUnits() {
+
+    var chart;
+    var speed_unit = (in_imperial ? #{t 'units.mph_html'} : #{t 'units.kmh_html'});
+    var dist_unit = (in_imperial ? #{t 'units.ft_html'} : #{t 'units.m_html'});
+
+
+    $('.val-unit').text(speed_unit);
+
+    // elevation/distance chart
+    chart = $('#elevation_distance_chart').highcharts();
+    chart.yAxis[0].update({
+      title: {
+        text: #{t 'tracks.show.eldst_dst_html'} + ', ' + dist_unit
+      }
+    });
+    chart.series[0].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+    chart.series[1].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+    chart.series[2].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+
+    // speeds chart
+    chart = $('#speeds_chart').highcharts();
+    chart.yAxis[0].update({
+      title: {
+        text: #{t 'tracks.show.spd_ax_html'} + ', ' + speed_unit
+      }
+    });
+    chart.series[0].update({
+      tooltip: {
+        valueSuffix: ' ' + speed_unit
+      }
+    });
+    chart.series[1].update({
+      tooltip: {
+        valueSuffix: ' ' + speed_unit
+      }
+    });
+
+    chart = $('#all_data_chart').highcharts();
+    chart.yAxis[0].update({
+      title: {
+        text: #{I18n.t 'tracks.show.adc_sp_y_html'} + ', ' + (in_imperial ? #{I18n.t 'units.mph_html'} : #{t 'units.kmh_html'})
+      }
+    });
+    chart.yAxis[1].update({
+      title: {
+        text: #{t 'tracks.show.adc_ed_y_html'} + ', ' + (in_imperial ? #{t 'units.ft_html'}  : #{t 'units.m_html'})
+      }
+    });
+    chart.series[0].update({
+      tooltip: {
+        valueSuffix: ' ' + speed_unit
+      }
+    });
+    chart.series[1].update({
+      tooltip: {
+        valueSuffix: ' ' + speed_unit
+      }
+    });
+    chart.series[3].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+    chart.series[4].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+    chart.series[5].update({
+      tooltip: {
+        valueSuffix: ' ' + dist_unit
+      }
+    });
+
+  }
 
 .container
   .page-header
