--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -520,15 +520,15 @@
             &times;
           %span.sr-only
             Close
-        %h4.modal-title= 'Edit range'
+        %h4.modal-title= t('tracks.show.edit_range')
 
       .modal-body
         .form-inline
           %label.control-label
-            Range from:
+            = t('tracks.show.range_from')
           %input.form-control#range-from{:type => 'number'}
           %label.control-label
-            to:
+            = t('tracks.show.range_to')
           %input.form-control#range-to{:type => 'number'}
 
       .modal-footer
