--- a/app/views/users/confirmations/new.html.haml
+++ b/app/views/users/confirmations/new.html.haml
@@ -4,7 +4,8 @@
   = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
     = devise_error_messages!
 
-    %div= f.label :email, t('activerecord.attributes.user.email')
+    %div
+      = f.label :email, t('activerecord.attributes.user.email')
       %br
       = f.email_field :email, autofocus: true
 
