--- a/app/views/users/passwords/new.html.haml
+++ b/app/views/users/passwords/new.html.haml
@@ -1,5 +1,6 @@
 .container
-  %h2= t('devise.passwords.new.forgot_your_password')
+  .page-header
+    %h2= t('devise.passwords.new.forgot_your_password')
 
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: 'form-horizontal' }) do |f|
     = devise_error_messages!
