--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,10 +1,11 @@
 .container.top-buffer
-  %h2
-    = t('users.profile.edit.title')
-    - if @user.user_profile
-      = @user.user_profile.name
-    - else
-      = @user.email
+  .page-header
+    %h2
+      = t('users.profile.edit.title')
+      - if @user.user_profile
+        = @user.user_profile.name
+      - else
+        = @user.email
 
   = form_for [@user, @user.user_profile], :html => {:class => 'form-horizontal'} do |f|
     .form-group
