--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,5 +1,6 @@
 .container
-  %h2= t 'devise.registrations.new.sign_up'
+  .page-header
+    %h2= t 'devise.registrations.new.sign_up'
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f|
     = devise_error_messages!
 
