disable point markers

--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -60,7 +60,7 @@
           plotOptions: {
             series: {
               marker: {
-                radius: 1
+                enabled: false
               },
               point: {
                 events: {
@@ -124,8 +124,7 @@
           plotOptions: {
             series: {
               marker: {
-                enabled: true,
-                radius: 1
+                enabled: false
               },
               point: {
                 events: {
@@ -183,8 +182,7 @@
           plotOptions: {
             series: {
               marker: {
-                enabled: true,
-                radius: 1
+                enabled: false
               },
               point: {
                 events: {
@@ -229,8 +227,7 @@
           plotOptions: {
             series: {
               marker: {
-                enabled: true,
-                radius: 1
+                enabled: false
               }
             }
           },
