--- a/app/views/events/_competitors_table.html.haml
+++ b/app/views/events/_competitors_table.html.haml
@@ -1,4 +1,9 @@
-%table.table.table-hover
+- if current_user.event_admin? @event
+  .top-buffer
+    %button.btn.btn-default{:data => {:toggle => 'modal', :target => '#newCompetitorModal'}}= 'Добавить участника'
+  = render 'new_competitor_form', :event => @event
+
+%table.table.table-hover.top-buffer
   %thead
     %tr
       %th= '№'
@@ -9,7 +14,7 @@
     %tr
       %td.text-danger.bg-warning{:colspan => 3}= val.ws_class.to_s.capitalize
     - val.competitors.each_with_index do |comp, ind|
-      %tr.clickableRow{:data => {:url => user_path(:id => comp.user_id)}}
+      %tr{:class => ('clickableRow' if comp.user_id), :data => {:url => (user_path(:id => comp.user_id) if comp.user_id)}}
         %td= ind + 1
         %td= comp[:name]
         %td.text-info= comp[:wingsuit]
