--- a/app/assets/javascripts/tracks.js.erb
+++ b/app/assets/javascripts/tracks.js.erb
@@ -89,6 +89,9 @@ function set_chart_data() {
       h_speed = [],
       v_speed = [],
       gr = [],
+      raw_h_speed = [],
+      raw_v_speed = [],
+      raw_gr = [],
 
       min_h_speed = 0,
       max_h_speed = 0,
@@ -160,6 +163,10 @@ function set_chart_data() {
 
       gr.push([fl_time, point.glrat]);
 
+      raw_h_speed.push([fl_time, point.raw_h_speed]);
+      raw_v_speed.push([fl_time, point.raw_v_speed]);
+      raw_gr.push([fl_time, point.raw_gr]);
+
       fl_time += Math.round(point.fl_time * 10) / 10;
 
       min_h_speed = min_h_speed == 0 || min_h_speed > point.h_speed ? point.h_speed : min_h_speed;
@@ -197,6 +204,11 @@ function set_chart_data() {
         index_cache.push(fl_time);
 
         gr.push([fl_time, point.glrat]);
+
+        raw_h_speed.push([fl_time, point.raw_h_speed]);
+        raw_v_speed.push([fl_time, point.raw_v_speed]);
+        raw_gr.push([fl_time, point.raw_gr]);
+
       }
       break;
     }
@@ -218,12 +230,16 @@ function set_chart_data() {
     var sp_chart = $('#speeds_chart').highcharts();
     sp_chart.series[0].setData(h_speed, false);
     sp_chart.series[1].setData(v_speed, false);
+    sp_chart.series[2].setData(raw_h_speed, false);
+    sp_chart.series[3].setData(raw_v_speed, false);
     sp_chart.redraw();
   }
 
   if (display_multiple_charts) {
     var gr_chart = $('#glideratio_chart').highcharts();
-    gr_chart.series[0].setData(gr);
+    gr_chart.series[0].setData(gr, false);
+    gr_chart.series[1].setData(raw_gr, false);
+    gr_chart.redraw();
   }
 
   if (display_all_data_chart) {
