--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,9 @@
 
   <h3><%= t('static_pages.about.developer')%></h3>
   <h3><%= t('static_pages.about.de_translate')%></h3>
+  <h3><%= t('static_pages.about.es_translate')%></h3>
   <h3><%= t('static_pages.about.logo_designed_by')%></h3>
+
   <br>
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
@@ -274,5 +276,12 @@
         </div>
       </div>
     </div>
+  </div>
+  <br>
+  <div>
+    GPX icon made by Freepik from
+    <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+    is licensed by
+    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
   </div>
 </div>
