--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -2,6 +2,200 @@
 
 :javascript
 
+  function set_chart_data() {
+
+    var dist_data = [],
+        elev_data = [],
+        heights_data = [],
+        h_speed = [],
+        v_speed = [],
+        gr = [],
+        raw_h_speed = [],
+        raw_v_speed = [],
+        raw_gr = [],
+
+        min_h_speed = 0,
+        max_h_speed = 0,
+
+        min_v_speed = 0,
+        max_v_speed = 0,
+
+        min_gr = 0,
+        max_gr = 0,
+
+        fl_time = 0,
+        dist = 0,
+        elev = 0,
+
+        mft_un_k = 1,
+        km_m_k = 1;
+
+    if (in_imperial) {
+      mft_un_k = mft_k;
+      km_m_k = 1.6093;
+    }
+
+    var max_val = typeof range_from !== 'undefined' ? range_from : 100000;
+    var min_val = typeof range_to !== 'undefined' ? range_to : 0;
+
+    index_cache = [];
+
+    var isFirst = true,
+        isLast = false;
+
+    for (var index in charts_data) {
+
+      var current_point = charts_data[index];
+      var point = {};
+
+      isLast = true;
+
+      if (current_point.elevation <= max_val && current_point.elevation >= min_val) {
+
+        point = clone(current_point);
+
+        // Корректировка выбранного диапазона
+        if (isFirst) {
+
+          isFirst = false;
+          if (current_point.elevation != max_val && charts_data.hasOwnProperty(index-1)) {
+
+            point.elevation_diff = max_val - current_point.elevation;
+
+            var k = point.elevation_diff / current_point.elevation_diff;
+
+            point.distance = Math.round(current_point.distance * k);
+            point.fl_time = Math.round(current_point.fl_time * k * 10) / 10;
+
+          }
+        }
+
+        isLast = false;
+
+        dist += point.distance;
+        elev += point.elevation_diff;
+
+        elev_data.push([fl_time, Math.round(elev * mft_un_k)]);
+        dist_data.push([fl_time, Math.round(dist * mft_un_k)]);
+        h_speed.push([fl_time, Math.round(point.h_speed / km_m_k)]);
+        v_speed.push([fl_time, Math.round(point.v_speed / km_m_k)]);
+        heights_data.push([fl_time, Math.round(point.elevation * mft_un_k)]);
+        index_cache.push(fl_time);
+
+        gr.push([fl_time, point.glrat]);
+
+        raw_h_speed.push([fl_time, point.raw_h_speed]);
+        raw_v_speed.push([fl_time, point.raw_v_speed]);
+        raw_gr.push([fl_time, point.raw_gr]);
+
+        fl_time += Math.round(point.fl_time * 10) / 10;
+
+        min_h_speed = min_h_speed == 0 || min_h_speed > point.h_speed ? point.h_speed : min_h_speed;
+        max_h_speed = max_h_speed == 0 || max_h_speed < point.h_speed ? point.h_speed : max_h_speed;
+
+        min_v_speed = min_v_speed == 0 || min_v_speed > point.v_speed ? point.v_speed : min_v_speed;
+        max_v_speed = max_v_speed == 0 || max_v_speed < point.v_speed ? point.v_speed : max_v_speed;
+
+        min_gr = min_gr == 0 || min_gr == null || min_gr > point.glrat ? point.glrat : min_gr;
+        max_gr = max_gr == 0 || max_gr == null || max_gr < point.glrat ? point.glrat : max_gr;
+      }
+
+      if (isLast && elev_data.length > 0) {
+        if (current_point.elevation <= min_val && charts_data.hasOwnProperty(index - 1)) {
+
+          point = clone(current_point);
+          prev_point = charts_data[index - 1];
+
+          point.elevation_diff = prev_point.elevation - min_val;
+          var k = point.elevation_diff / current_point.elevation_diff;
+
+          point.fl_time = current_point.fl_time * k;
+          point.elevation = min_val;
+          point.distance = Math.round(current_point.distance * k);
+
+          dist += point.distance;
+          elev += point.elevation_diff;
+          fl_time += Math.round(point.fl_time * 10) / 10;
+
+          elev_data.push([fl_time, Math.round(elev * mft_un_k)]);
+          dist_data.push([fl_time, Math.round(dist * mft_un_k)]);
+          h_speed.push([fl_time, Math.round(point.h_speed / km_m_k)]);
+          v_speed.push([fl_time, Math.round(point.v_speed / km_m_k)]);
+          heights_data.push([fl_time, Math.round(point.elevation * mft_un_k)]);
+          index_cache.push(fl_time);
+
+          gr.push([fl_time, point.glrat]);
+
+          raw_h_speed.push([fl_time, point.raw_h_speed]);
+          raw_v_speed.push([fl_time, point.raw_v_speed]);
+          raw_gr.push([fl_time, point.raw_gr]);
+
+        }
+        break;
+      }
+    }
+
+    var all_data_chart = $('#all_data_chart');
+    var display_multiple_charts = $('#multiple-charts').css('display') !== 'none';
+    var display_all_data_chart = all_data_chart.css('display') !== 'none';
+
+    if (display_multiple_charts) {
+      var ed_chart = $('#elevation_distance_chart').highcharts();
+      ed_chart.series[0].setData(elev_data, false);
+      ed_chart.series[1].setData(dist_data, false);
+      ed_chart.series[2].setData(heights_data, false);
+      ed_chart.redraw();
+    }
+
+    if (display_multiple_charts) {
+      var sp_chart = $('#speeds_chart').highcharts();
+      sp_chart.series[0].setData(h_speed, false);
+      sp_chart.series[1].setData(v_speed, false);
+      sp_chart.series[2].setData(raw_h_speed, false);
+      sp_chart.series[3].setData(raw_v_speed, false);
+      sp_chart.redraw();
+    }
+
+    if (display_multiple_charts) {
+      var gr_chart = $('#glideratio_chart').highcharts();
+      gr_chart.series[0].setData(gr, false);
+      gr_chart.series[1].setData(raw_gr, false);
+      gr_chart.redraw();
+    }
+
+    if (display_all_data_chart) {
+      var ad_chart = all_data_chart.highcharts();
+      ad_chart.series[0].setData(h_speed, false);
+      ad_chart.series[1].setData(v_speed, false);
+      ad_chart.series[2].setData(gr, false);
+      ad_chart.series[3].setData(heights_data, false);
+      ad_chart.series[4].setData(dist_data, false);
+      ad_chart.series[5].setData(elev_data, false);
+      ad_chart.redraw();
+    }
+
+    if (in_imperial){
+      $('#dd_distance').text(Math.round(dist * mft_k) + ' ' + #{t 'units.ft_html' });
+      $('#dd_elevation').text((elev * mft_k).toFixed(0) + ' ' + #{t 'units.ft_html'});
+    } else {
+      $('#dd_distance').text(dist.toFixed(0) + ' ' + #{t 'units.m_html'});
+      $('#dd_elevation').text(elev.toFixed(0) + ' ' + #{t 'units.m_html'});
+    }
+    $('#dd_fl_time').text(fl_time.toFixed(1) + ' ' + #{t 'units.t_html'});
+
+    $('#p_min_v_speed').text((min_v_speed / km_m_k).toFixed(0));
+    $('#p_max_v_speed').text((max_v_speed / km_m_k).toFixed(0));
+    $('#p_avg_v_speed').text(Math.round((elev / fl_time * 3.6) / km_m_k).toString());
+
+    $('#p_min_h_speed').text((min_h_speed / km_m_k).toFixed(0));
+    $('#p_max_h_speed').text((max_h_speed / km_m_k).toFixed(0));
+    $('#p_avg_h_speed').text(Math.round((dist / fl_time * 3.6) / km_m_k).toString());
+
+    $('#p_min_gr').text(min_gr.toFixed(2));
+    $('#p_max_gr').text(max_gr.toFixed(2));
+    $('#p_avg_gr').text((dist / elev).toFixed(2));
+
+  }
   $(function() {
 
     // Массив хэшей содержащий данные трека
@@ -517,42 +711,99 @@
                 %li{:role => 'presentation'}
                   = link_to t('general.delete'), @track, :method => :delete, :data => {:confirm => t('.delete_confirmation')}, :role => 'menuitem'
 
-  .row
-    .col-md-3
-      %dl.dl-horizontal
-        %dt
-          %strong=t '.dt_dist'
-        %dd#dd_distance
-        %dt
-          %strong=t '.dt_elev'
-        %dd#dd_elevation
-        %dt
-          %strong=t '.dt_dur'
-        %dd#dd_fl_time
-    .col-md-5
-      %dl.dl-horizontal
-        %dt.d-term
-          %strong=t '.dt_hspd'
-        %dd#dd_h_speed
-          .min-val#p_min_h_speed
-          .avg-val#p_avg_h_speed
-          .max-val#p_max_h_speed
-          .val-unit=t 'units.kmh'
-        %dt.d-term
-          %strong=t '.dt_vspd'
-        %dd#dd_v_speed
-          .min-val#p_min_v_speed
-          .avg-val#p_avg_v_speed
-          .max-val#p_max_v_speed
-          .val-unit=t 'units.kmh'
-        %dt
-          %strong=t '.dt_gr'
-        %dd#dd_gr
-          .min-val#p_min_gr
-          .avg-val#p_avg_gr
-          .max-val#p_max_gr
+  -#.row
+  -#  .col-md-3
+  -#    %dl.dl-horizontal
+  -#      %dt
+  -#        %strong=t '.dt_dist'
+  -#      %dd
+  -#      %dt
+  -#        %strong=t '.dt_elev'
+  -#      %dd
+  -#      %dt
+  -#        %strong=t '.dt_dur'
+  -#      %dd
+  -#  .col-md-5
+  -#    %dl.dl-horizontal
+  -#      %dt.d-term
+  -#        %strong=t '.dt_hspd'
+  -#      %dd#dd_h_speed
+  -#
+  -#
+  -#      %dt.d-term
+  -#        %strong=t '.dt_vspd'
+  -#      %dd#dd_v_speed
+  -#
+  -#      %dt
+  -#        %strong=t '.dt_gr'
+  -#      %dd#dd_gr
 
-  %hr.top-buffer-10
+
+  .row
+    .col-md-11.col-md-offset-1
+      .row
+        .col-md-4
+          .param-val
+            .fa-3x#dd_distance
+          .param
+            %i.fa.fa-fw.fa-lg.fa-arrows-h
+            =t '.dt_dist'
+        .col-md-4
+          .param-val
+            .avg-val.fa-3x#p_avg_h_speed
+            .min-max.text-right
+              .max-val
+                %span#p_max_h_speed
+                %i.fa.fa-lg.fa-caret-up
+              .min-val
+                %span#p_min_h_speed
+                %i.fa.fa-lg.fa-caret-down
+            .val-unit.fa-3x=t 'units.kmh'
+          .param
+            %i.fa.fa-fw.fa-lg.fa-long-arrow-right
+            =t '.dt_hspd'
+        .col-md-4
+          .param-val
+            .avg-val.fa-3x#p_avg_gr
+            .min-max.text-right
+              .max-val
+                %span#p_max_gr
+                %i.fa.fa-lg.fa-caret-up
+              .min-val
+                %span#p_min_gr
+                %i.fa.fa-lg.fa-caret-down
+          .param
+            %i.fa.fa-fw.fa-lg.fa-ellipsis-h
+            =t '.dt_gr'
+      .row.top-buffer
+        .col-md-4
+          .param-val
+            .fa-3x#dd_elevation
+          .param
+            %i.fa.fa-fw.fa-lg.fa-arrows-v
+            =t '.dt_elev'
+        .col-md-4
+          .param-val
+            .avg-val.fa-3x#p_avg_v_speed
+            .min-max.text-right
+              .max-val
+                %span#p_max_v_speed
+                %i.fa.fa-lg.fa-caret-up
+              .min-val
+                %span#p_min_v_speed
+                %i.fa.fa-lg.fa-caret-down
+            .val-unit.fa-3x=t 'units.kmh'
+          .param
+            %i.fa.fa-fw.fa-lg.fa-long-arrow-down
+            =t '.dt_vspd'
+        .col-md-4
+          .param-val
+            .fa-3x#dd_fl_time
+          .param
+            %i.fa.fa-fw.fa-lg.fa-clock-o
+            =t '.dt_dur'
+
+  %hr.top-buffer
 
   .row#content-row
     .col-sm-12
